# cmake-external-packages

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
cppunit/: CMakeLists.txt
log4cpp/: CMakeLists.txt  log4cpp-1.1.1.targets
protobuf-v2/: CMakeLists.txt  protobuf-2.4.1.targets  protobuf-2.5.0.targets  protobuf-2.6.0.targets  protobuf-2.6.1.targets
tinyxml/: CMakeLists.txt
